modify valentines2 modify css modified valentines2 html to fix issues.  modified css to fix flexbox wrapping

--- a/style.css
+++ b/style.css
@@ -29,8 +29,6 @@ a {
 button {
     border: none;
     background-color: pink;
-    /* padding: 5px 10px;
-    border-radius: 40px; */
 }
 
 .heartbutton {
@@ -85,22 +83,21 @@ button {
 .image-three,
 .image-four,
 .image-five {
-    height: auto;
-    width: 300px;
+    height: 300px;
+    width: auto;
     display: flex;
     flex-wrap: wrap;
-    flex: 1 0;
 }
 
 .images {
     display: flex;
     font-size: 20px;
     height: auto;
-    width: auto;
-    /* gap: 35px; */
+    width: 350px;
+    margin: 10px;
+    gap: 30px;
     flex-wrap: wrap;
     justify-content: center;
-    Flex: 1;
 }
 
 .valentines {
